# IntelligentInfrastructureMobileApp

./: .gitignore  LICENSE  README.md  setupPi.sh
app/parkingapp/: .gitignore  README.md  pubspec.lock~fe3d41293b345b6ba272eb70d4fc9ef654f27248  pubspec.yaml
app/parkingapp/assets/: example-vehicle.json  example-vehicles.json
app/parkingapp/icon/: icon.sketch
app/parkingapp/ios/: Podfile
app/parkingapp/lib/: main.dart
backend/: .gitignore  README.md  requirements.txt  setup_script.sh  setup_script_standalone.sh  shutdown_script.sh
backend/flask_server/: ParkApp_Flask_Server.py  config.properties  test_ParkApp_Flask_Server.py
backend/parking_app_ros_pkg/: CMakeLists.txt  package.xml  setup.py
backend/parking_app_ros_pkg/msg/: CapacityMsg.msg  MultiPathMsg.msg  ParkPreferencesMsg.msg  PathMsg.msg  VehicleDimensionsMsg.msg  VehicleIdentificationMsg.msg  VehicleInformationMsg.msg  VehicleLoadingMsg.msg  VehicleMotionInstructionMsg.msg  VehicleStatusMsg.msg
backend/parking_app_ros_pkg/scripts/: ParkApp_Flask_Server.py  Service_Server.py  listener.py
backend/parking_app_ros_pkg/src/parking_app_python_pkg/: database.py  parking_communication.py
backend/parking_app_ros_pkg/srv/: CapacityRequest.srv  LoadVehicleRequest.srv  RegisterVehicleRequest.srv
backend/ros_parking_management_msgs/: CMakeLists.txt  package.xml
backend/test/: test_ParkApp_Flask_Server.py
parkingapp/: l10n.yaml  pubspec.yaml
parkingapp/lib/: main.dart
parkingapp/localizations/: app_de.arb  app_en.arb
raspberryPiSetup/: Set Up Raspberry.txt  setupPi.sh  updateFromGit.sh
(+127 files in other folders)
